--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -54,6 +54,7 @@ p {
 
 .navbar {
   background-color: #20232a;
+  color: rgb(245, 246, 247);
   position: sticky;
   top: 0;
   padding: 0px 16px;
@@ -91,11 +92,9 @@ p {
   margin-right: 10px;
 }
 
-.navbar_items {
-  a {
-    color: rgb(245, 246, 247);
-    text-decoration: none;
-  }
+.navbar_items a {
+  text-decoration: none;
+  color: rgb(245, 246, 247);
 }
 
 .navbar_items--right {
@@ -147,6 +146,7 @@ p {
   display: flex;
   align-items: center;
   cursor: pointer;
+  color: gray;
   border: none;
   border-radius: 5px;
   overflow: hidden;
@@ -156,17 +156,15 @@ p {
 
 .searchButton:hover {
   background: #f8f7f7;
-  .seach_placeholder {
-    color: #3f4042;
-  }
 }
 
-.searchButton {
-  span {
-    display: flex;
-    align-items: center;
-    padding: 2px;
-  }
+.seach_placeholder {
+  color: #3f4042;
+}
+
+.searchBox_search_icon, .searchBox_img {
+  display: flex;
+  padding: 2px;
 }
 
 .dropdown_title {
@@ -316,6 +314,7 @@ p {
 }
 
 /*********************** MAIN CONTENT ****************/
+
 .section {
   padding: 50px 0px;
 }
@@ -679,7 +678,7 @@ p {
   padding-left: 50px;
 }
 
-/********************** VIDEO_CONTENT SECTION-7 ****************/
+  /********************** VIDEO_CONTENT SECTION-7 ****************/
 
 .videoContent {
   background-color: #f2f2f2;
@@ -691,9 +690,9 @@ p {
 }
 
 .videoContent_first,
-.videoContent_second {
-  display: flex;
-}
+  .videoContent_second {
+    display: flex;
+  }
 
 .videoContent_first_left,
 .videoContent_second_left {
@@ -722,7 +721,7 @@ p {
   line-height: 21px;
 }
 
-/************************* COMMUNITY SECTION-8 ************************/
+  /************************* COMMUNITY SECTION-8 ************************/
 
 .community {
   max-width: 900px;
@@ -757,7 +756,9 @@ p {
   display: grid;
   grid-template-columns: repeat(5, auto);
   grid-gap: 16px;
+}
 
+.grid_container {
   img {
     max-width: 100%;
     border-radius: 16px;
@@ -765,67 +766,76 @@ p {
   }
 }
 
-/************************* GET_STARTED SECTION-9 ************************/
+ /************************* GET_STARTED SECTION-9 ************************/
 
 .getStarted {
   background-color: #282c34;
+}
 
+.getStarted_content {
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.getStarted {
   .heading {
     margin-bottom: 20px;
     color: #61dafb;
   }
+}
 
+.getStarted {
   ol {
     color: white;
   }
+}
 
-  li::marker {
-    color: #525860;
-  }
-
+.getStarted {
   .steps {
-    // align-self: center;
     li {
       margin-bottom: 10px;
       font-size: 28px;
-
-      .step_name {
-        margin-bottom: 20px;
-        font-weight: 300;
-      }
     }
+  }
+}
 
+.getStarted {
+  .steps {
+    // align-self: center;
+  }
+}
+
+.getStarted {
+  li::marker {
+    color: #525860;
+  }
+}
+
+.getStarted {
+  .steps {
     p {
       font-size: 17px;
     }
   }
+}
 
-  .terminal {
-    border-left: 1px solid gray;
-    border-right: 1px solid gray;
-    border-top: 1px solid gray;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    padding: 30px 30px 0;
-    position: relative;
-    width: 600px;
+.getStarted .terminal {
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  border-top: 1px solid gray;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 30px 0;
+  position: relative;
+  width: 600px;
+}
 
-    code {
-      font-size: 18px;
-      position: relative;
-      margin: 5px 0;
-    }
-
-    code:first-child:before {
-      color: gray;
-      content: ">";
-      left: -15px;
-      position: absolute;
-    }
-  }
-
+.getStarted {
   .terminal:before {
     color: gray;
     content: "○ ○ ○";
@@ -837,92 +847,112 @@ p {
   }
 }
 
-.getStarted_content {
-  max-width: 900px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  border: 2px dotted green;
-}
-
-/************************* FOOTER ************************/
-
-.footer {
-  background-color: #20232a;
-
-  .footer_content {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 34px 32px;
-
-    .footer_links {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-
-      a {
-        text-decoration: none;
-        color: white;
-        line-height: 1.44;
-      }
-
-      .footer_col {
-        ul {
-          list-style: none;
-          padding-left: 0px;
-          margin: 0px;
-          font-size: 14px;
-        }
-
-        .footer_title {
-          color: #858a96;
-          font-size: 14px;
-          font-weight: 500;
-          text-transform: uppercase;
-          margin: 0 0 8px;
-        }
-
-        .footer_item {
-          padding-top: 8px;
-
-          a {
-            color: rgb(235, 237, 240);
-          }
-        }
-      }
-    }
-
-    .footer_bottom {
-      margin: 30px 0px;
-
-      a {
-        text-decoration: none;
-        color: #858a96;
-      }
-
-      .meta_open_source {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 5px;
-
-        .meta_icon {
-          display: flex;
-          align-items: center;
-        }
-      }
-    }
-
-    .footer_copyright {
-      text-align: center;
-      color: #858a96;
-      font-size: 13px;
-      letter-spacing: 0px;
+.getStarted {
+  .terminal {
+    code:first-child:before {
+      color: gray;
+      content: ">";
+      left: -15px;
+      position: absolute;
     }
   }
 }
 
+code {
+  font-size: 18px;
+  position: relative;
+  margin: 5px 0;
+}
+
+.step_name {
+  margin-bottom: 20px;
+  font-weight: 300;
+}
+
+  /************************* FOOTER ************************/
+
+.footer {
+  background-color: #20232a;
+}
+
+.footer_content {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 34px 32px;
+}
+
+.footer {
+  .footer_title {
+    color: #858a96;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin: 0 0 8px;
+  }
+}
+
+.footer_links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer_links {
+  a {
+    text-decoration: none;
+    color: white;
+    line-height: 1.44;
+  }
+}
+
+.footer_col {
+  ul {
+    list-style: none;
+    padding-left: 0px;
+    margin: 0px;
+    font-size: 14px;
+  }
+}
+
+.footer_item {
+  padding-top: 8px;
+}
+
+.footer_item a {
+  color: rgb(235, 237, 240);
+}
+
+.footer_bottom {
+  margin: 30px 0px;
+}
+
+.footer_bottom {
+  a {
+    text-decoration: none;
+    color: #858a96;
+  }
+}
+
+.meta_open_source {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.meta_icon {
+  display: flex;
+  align-items: center;
+}
+
+.footer_copyright {
+  text-align: center;
+  color: #858a96;
+  font-size: 13px;
+  letter-spacing: 0px;
+}
+
+  /************************ MEDIA_QUERY (MAX-WIDTH: 1200PX) ************************/
 
 @media screen and (max-width: 1200px) {
   .search-icon {
@@ -931,21 +961,17 @@ p {
   }
 
   .searchButton {
-    padding: 8px;
+    padding: 5px;
   }
 
-  .seach_placeholder {
+  .seach_placeholder, .searchBox_img {
     display: none;
-  }
-
-  .searchButton {
-    span:last-child {
-      display: none;
-    }
   }
 }
 
-@media screen and (max-width: 1000px) {
+  /************************ MEDIA_QUERY (MAX-WIDTH: 1000PX) ************************/
+
+@media screen and (max-width: 1020px) {
   .searchBox {
     padding: 12px 0px;
   }
@@ -964,13 +990,14 @@ p {
   }
 }
 
+  /************************ MEDIA_QUERY (MAX-WIDTH: 961PX) ************************/
+
 @media screen and (max-width: 961px) {
   .section {
     padding: 50px 68px;
   }
 
   .headerHero_content {
-    display: flex;
     flex-direction: column-reverse;
     align-items: center;
     margin: 0 auto;
@@ -985,7 +1012,6 @@ p {
     flex-direction: column-reverse;
     align-items: center;
     max-height: inherit;
-    // padding: 0;
     margin: 0;
   }
 
@@ -995,10 +1021,6 @@ p {
     justify-content: center;
     width: 66%;
     max-height: 300px;
-  }
-
-  .nativeApps_left img {
-    // width: 66.66%;
   }
 
   .nativeApps_right {
@@ -1014,10 +1036,10 @@ p {
 
   .nativeCode_left {
     width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // height: fit-content;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     padding: 50px 68px 0px 68px;
   }
 
@@ -1030,9 +1052,6 @@ p {
     width: 100%;
     margin-top: 0px;
     margin-bottom: 0px;
-    overflow: auto;
-    background-color: #282c34;
-    position: relative;
   }
 
   .nativeCode_right_content {
@@ -1040,13 +1059,6 @@ p {
   }
 
   .copy-btn {
-    color: white;
-    background: transparent;
-    border: 2px solid gray;
-    padding: 6.8px;
-    border-radius: 5px;
-    opacity: 0.4;
-    position: absolute;
     left: 95%;
     top: 0.5rem;
   }
@@ -1055,7 +1067,8 @@ p {
     width: fit-content;
     margin: 0 auto;
     position: inherit;
-    padding-top: 50px;
+    top: 0;
+    padding-top: 30px;
   }
 
   .nativeDevelopment {
@@ -1069,7 +1082,7 @@ p {
   .nativeDevelopment_left {
     width: 66%;
     margin: 0 auto;
-    min-height: 300px;
+    // min-height: 300px;
   }
 
   .nativeDevelopment_right {
@@ -1078,7 +1091,6 @@ p {
   }
 
   .crossPlatform_content {
-    display: flex;
     flex-direction: column;
     gap: 2rem;
   }
@@ -1091,8 +1103,6 @@ p {
   .crossPlatform_right {
     width: 100%;
     padding-left: 0px;
-    display: flex;
-    justify-content: center;
   }
 
   .crossPlatform_right svg {
@@ -1100,14 +1110,10 @@ p {
     max-width: 100%;
   }
 
-  //////////////////////////
-
   .fastRefresh {
     flex-direction: column-reverse;
     gap: 2rem;
-    padding: 50px 0px;
     max-width: 100%;
-    // padding-bottom: 0px;
   }
 
   .fastRefresh_left {
@@ -1127,7 +1133,6 @@ p {
 
   .videoContent_first,
   .videoContent_second {
-    display: flex;
     flex-direction: column;
     gap: 3rem;
   }
@@ -1152,14 +1157,8 @@ p {
   }
 
   .community_desc {
-    display: flex;
     flex-direction: column;
     gap: 2rem;
-  }
-
-  .community_desc_intro {
-    display: flex;
-    gap: 15px;
   }
 
   .community_desc_left {
@@ -1193,6 +1192,8 @@ p {
   }
 }
 
+  /************************ MEDIA_QUERY (MAX-WIDTH: 760PX) ************************/
+
 @media screen and (max-width: 760px) {
   .social_links {
     margin-top: -2rem;
@@ -1201,9 +1202,7 @@ p {
     .title {
       font-size: 60px;
       text-align: center;
-      line-height: 1;
       margin-bottom: 10px;
-      // height: 50px;
     }
   }
 
@@ -1215,7 +1214,6 @@ p {
   }
 
   .nativeCode_code_content {
-    // width: 100%;
     padding-left: 0;
     padding-right: 0;
     white-space: nowrap;
@@ -1227,13 +1225,14 @@ p {
 
   .getStarted_content {
     width: 80%;
-    // padding-left: 20px;
   }
 
   .terminal {
     width: 100% !important;
   }
 }
+
+  /************************ MEDIA_QUERY (MAX-WIDTH: 576PX) ************************/
 
 @media screen and (max-width: 576px) {
   .nativeDevelopment_left {
@@ -1249,6 +1248,8 @@ p {
   }
 }
 
+  /************************ MEDIA_QUERY (MAX-WIDTH: 500PX) ************************/
+
 @media screen and (max-width: 500px) {
   .footer_col {
     width: 100%;
@@ -1260,6 +1261,8 @@ p {
     row-gap: 20px;
   }
 }
+
+  /************************ MEDIA_QUERY (MAX-WIDTH: 480PX) ************************/
 
 @media screen and (max-width: 480px) {
   .headerHero_left {
