--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -721,6 +721,10 @@ p {
   line-height: 21px;
 }
 
+.lightBlue_button:hover {
+  background-color: rgba(187,239,253,.6);
+}
+
   /************************* COMMUNITY SECTION-8 ************************/
 
 .community {
