--- a/React/todo-app/src/components/Container/Container.scss
+++ b/React/todo-app/src/components/Container/Container.scss
@@ -5,8 +5,9 @@
   background-color: rgb(158, 224, 202);
   padding: 20px;
   border-radius: 10px;
+
+  .heading {
+    text-align: center;
+    margin-bottom: 10px;
+  }
 }
-.container .heading {
-  text-align: center;
-  margin-bottom: 10px;
-}/*# sourceMappingURL=Container.css.map */
