--- a/React/todo-app/src/components/ShowTasks/ShowTasks.css
+++ b/React/todo-app/src/components/ShowTasks/ShowTasks.css
@@ -1,72 +1,22 @@
 .todo {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    margin: 30px auto 0px;
-    background-color: rgb(158, 224, 202);
-    overflow: hidden;
-  }
-
-  ul li {
-    width: 100%;
-    font-size: larger;
-    padding: 15px 20px;
-    border: 2px solid;
-    border-radius: 5px;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 10px;
-  }
-
-  .item {
-    display: flex;
-    align-items: center;
-    height: 50px;
-    background-color: rgb(225, 250, 197);
-    font-size: larger;
-  }
-
-  ul li .btn {
-    border-radius: 10px;
-    border: none;
-    text-align: center;
-    padding: 5px 20px;
-    cursor: pointer;
-  }
-
-  .edit-btn {
-    margin-right: 10px;
-    background-color: rgb(192, 193, 255);
-    transition: 0.2s ease-out;
-  }
-
-  .edit-btn:hover {
-    background-color: blueviolet;
-    color: white;
-  }
-
-  .save-btn {
-    margin-right: 10px;
-    background-color: rgb(59, 231, 59);
-    color: black;
-    transition: 0.2s ease-out;
-  }
-
-  .save-btn:hover {
-    background-color: green;
-    color: white;
-  }
-
-  .delete-btn {
-    background-color: rgb(243, 95, 95);
-    color: white;
-    transition: 0.2s ease-out;
-  }
-
-  .delete-btn:hover {
-    background-color: brown;
-  }
-
-  .save-btn:hover {
-    background-color: green;
-  }
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: 30px auto 0px;
+  background-color: rgb(158, 224, 202);
+}
+.todo .item {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  background-color: rgb(225, 250, 197);
+  font-size: larger;
+  width: 100%;
+  font-size: larger;
+  /* padding: 15px 20px; */
+  border: 2px solid;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 10px;
+}/*# sourceMappingURL=ShowTasks.css.map */
