--- a/React/todo-app/src/components/Container/Container.css
+++ b/React/todo-app/src/components/Container/Container.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100%;
   max-width: 1000px;
   margin: 40px auto;
   background-color: rgb(158, 224, 202);
@@ -9,4 +8,10 @@
 .container .heading {
   text-align: center;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    margin: 40px 24px;
+  }
 }/*# sourceMappingURL=Container.css.map */
