--- a/React/todo-app/src/components/ShowTasks/ShowTasks.css
+++ b/React/todo-app/src/components/ShowTasks/ShowTasks.css
@@ -10,13 +10,13 @@
   align-items: center;
   height: 50px;
   background-color: rgb(225, 250, 197);
-  font-size: larger;
-  width: 100%;
-  font-size: larger;
-  /* padding: 15px 20px; */
   border: 2px solid;
   border-radius: 5px;
-  position: relative;
-  overflow: hidden;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .todo {
+    width: 100%;
+  }
 }/*# sourceMappingURL=ShowTasks.css.map */
