--- a/React/todo-app/src/components/TaskDetail/TaskDetail.css
+++ b/React/todo-app/src/components/TaskDetail/TaskDetail.css
@@ -1,83 +1,87 @@
-.d1 {
+.left_wrapper {
   border-right: 2px solid black;
   padding: 0px 15px;
   height: 100%;
   display: flex;
 }
-.d1 .checkbox {
+.left_wrapper .checkbox {
   width: 18px;
   cursor: pointer;
 }
 
-.d2 {
+.right_wrapper {
   padding: 0px 15px;
   display: flex;
+  flex: 1;
   justify-content: space-between;
-  width: 100%;
   overflow: hidden;
 }
-.d2 .task {
-  width: 75%;
+.right_wrapper .task {
+  flex: 1;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 20px;
 }
-.d2 .checked {
+.right_wrapper .checked {
   text-decoration: line-through;
   text-decoration-thickness: 2px;
 }
-.d2 .edit-task {
-  width: 100%;
+.right_wrapper .edit-task {
+  flex: 1;
   height: 30px;
   border: none;
   outline: none;
   background: transparent;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin-right: 5px;
   font-size: 20px;
 }
-
-.btn {
+.right_wrapper .btn {
   border-radius: 10px;
   border: none;
   text-align: center;
   padding: 5px 20px;
   cursor: pointer;
 }
-
-.edit-btn {
+.right_wrapper .edit-btn {
   margin-right: 10px;
   background-color: rgb(192, 193, 255);
   transition: 0.2s ease-out;
 }
-
-.edit-btn:hover {
+.right_wrapper .edit-btn:hover {
   background-color: blueviolet;
   color: white;
 }
-
-.save-btn {
+.right_wrapper .save-btn {
   margin-right: 10px;
   background-color: rgb(59, 231, 59);
   color: black;
   transition: 0.2s ease-out;
 }
-
-.save-btn:hover {
+.right_wrapper .save-btn :hover {
   background-color: green;
   color: white;
 }
-
-.delete-btn {
+.right_wrapper .delete-btn {
   background-color: rgb(243, 95, 95);
   color: white;
   transition: 0.2s ease-out;
 }
-
-.delete-btn:hover {
+.right_wrapper .delete-btn :hover {
   background-color: brown;
 }
 
-.save-btn:hover {
-  background-color: green;
+@media screen and (max-width: 578px) {
+  .right_wrapper .task {
+    font-size: 16px;
+  }
+  .right_wrapper .edit-task {
+    font-size: 16px;
+  }
+  .right_wrapper .btn {
+    padding: 5px 10px;
+  }
 }/*# sourceMappingURL=TaskDetail.css.map */
