--- a/React/tmdb_clone/src/components/watchProvider/watchProvider.css
+++ b/React/tmdb_clone/src/components/watchProvider/watchProvider.css
@@ -7,13 +7,14 @@
 .ott_wrapper .ott_item {
   list-style: none;
   position: relative;
+  cursor: pointer;
 }
 .ott_wrapper .ott_item .item_logo {
   width: 50px;
   height: 50px;
   border-radius: 8px;
 }
-.ott_wrapper .ott_item:hover .tooltip_img_wrapper {
+.ott_wrapper .ott_item:hover .tooltip_img_wrapper, .ott_wrapper .ott_item.selected .tooltip_img_wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,10 +27,9 @@
   height: 50px;
   border-radius: 8px;
 }
-.ott_wrapper .ott_item:hover .tooltip_img_wrapper .tooptip_img {
+.ott_wrapper .ott_item:hover .tooltip_img_wrapper .tooltip_img, .ott_wrapper .ott_item.selected .tooltip_img_wrapper .tooltip_img {
   display: block;
   background-image: url("https://www.themoviedb.org/assets/2/v4/glyphicons/basic/glyphicons-basic-739-check-white-a09b2a26e235b77489dfd57be3b66a17ff86efd5fb94d6db5f10cd3ced01e5a6.svg");
   width: 30px;
   height: 30px;
-  border: 2px solid red;
 }/*# sourceMappingURL=watchProvider.css.map */
