--- a/React/tmdb_clone/src/pages/filter/components/filterList/filterList.scss
+++ b/React/tmdb_clone/src/pages/filter/components/filterList/filterList.scss
@@ -9,7 +9,7 @@
     padding: 4px 12px;
     margin-right: 8px;
     margin-bottom: 8px;
-    cursor: context-menu;
+    cursor: pointer;
 
     &:hover {
       background-color: #01b4e4;
