--- a/React/tmdb_clone/src/pages/home/components/discover/discover.scss
+++ b/React/tmdb_clone/src/pages/home/components/discover/discover.scss
@@ -1,10 +1,10 @@
 .inner_content {
     max-width: 1400px;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    // display: flex;
+    // justify-content: center;
+    // flex-wrap: wrap;
+    // align-items: flex-start;
     margin: 0 auto;
 }
 
